# DEVOPS_TOOLS

./: CMakeLists.txt  README.md  disk.cpp  server_info.cpp  serverinfo_test.cpp  tcp_server.cpp  tcp_socket.cpp
DEVOPS_CLIENT/: CMakeLists.txt  server_info.cpp  server_info.h  tcp_socket.h  z_client.cpp
READ_SERVERINFO/: get_cpu_rate.cpp  memory.cpp
WEB_SERVER1.0/: CMakeLists.txt  server.cpp  tcp_server.h  tcp_socket.cpp
WEB_SERVER1.0/threads_tools/: Task_queue.cpp  Task_queue.h  Thread_pools.cpp  Thread_pools.h  readme  test.cpp
web_server_select/: CMakeLists.txt  README  server.cpp
